# nexus_screenshot_manager

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  todo.norg
include/: globals.hpp  gui.hpp  settings.hpp
include/imgui-filebrowser/: imfilebrowser.h
include/imgui/misc/cpp/: imgui_stdlib.h
include/mumble/: CMakeLists.txt  Mumble.h
include/nexus/: CMakeLists.txt  Nexus.h
include/nlohmann/: CMakeLists.txt
include/stbi/: stbi.hpp
include/uuid_v4/: uuid_v4.h
src/: globals.cpp  gui.cpp  main.cpp  settings.cpp
src/imgui/: CMakeLists.txt  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_tables.cpp  imgui_widgets.cpp
src/imgui/misc/cpp/: imgui_stdlib.cpp
